KR - Refonte de l'administration

--- a/admin/templates/admin.html.twig
+++ b/admin/templates/admin.html.twig
@@ -22,8 +22,7 @@
                 <li><a href="{{ path('admin') }}">Accueil</a></li>
                 <li><a href="{{ path('pages_site') }}">Pages du site</a></li>
                 <li><a href="{{ path('articles_site') }}">Articles</a></li>
-                <li><a href="{{ path('header_manage') }}">En-tête du site</a></li>
-                <li><a href="{{ path('footer_manage') }}">Pied de page du site</a></li>
+                <li><a href="{{ path('header_manage') }}">Template du site</a></li>
                 <li><a href="{{ path('users_list') }}">Utilisateurs</a></li>
                 <li><a href="/logout">Se déconnecter</a></li>
             </ul>
